--- a/tf/shippable.yml
+++ b/tf/shippable.yml
@@ -40,6 +40,7 @@ jobs:
           script:
             - pushd $(shipctl get_resource_state "code_repo")
             - export AWS_ACCESS_KEY_ID=$(shipctl get_integration_field demo_aws "accessKey")
+            - echo $AWS_ACCESS_KEY_ID
 #            - export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_vpc_tf_creds "secretKey")
 #            - shipctl copy_file_from_resource_state aws_vpc_tf_state terraform.tfstate .
 #            - shipctl replace terraform.tfvars
