--- a/tf/shippable.yml
+++ b/tf/shippable.yml
@@ -38,7 +38,7 @@ jobs:
                 - vpc_access_from_ip_range: "0.0.0.0/0"
                 - vpc_public_subnet_1_cidr: "10.10.10.0/24"
           script:
-            - pushd $(shipctl get_resource_state "code_repo")
+            - pushd $(shipctl get_resource_state "code_repo")/tf
             - export AWS_ACCESS_KEY_ID=$(shipctl get_integration_field "demo_aws" "accessKey")
             - export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_field "demo_aws" "secretKey")
             - shipctl copy_file_from_resource_state "tf_state" terraform.tfstate . || true
