--- a/tf/shippable.yml
+++ b/tf/shippable.yml
@@ -40,7 +40,7 @@ jobs:
             options:
               env:
                 - region: "us-east-1"
-                - vpc_name: "lara_vpc"
+                - vpc_name: "vpc"
                 - vpc_cidr_block: "10.10.0.0/16"
                 - vpc_access_from_ip_range: "0.0.0.0/0"
                 - vpc_public_subnet_1_cidr: "10.10.10.0/24"
