--- a/shippable.yml
+++ b/shippable.yml
@@ -7,5 +7,6 @@ build:
   ci:
     - cd lara
     - composer global require "laravel/installer"
+    - export PATH=~/.composer/vendor/bin:$PATH
     - laravel new blog
     - php artisan serve
