--- a/shippable.yml
+++ b/shippable.yml
@@ -33,3 +33,26 @@ jobs:
           script:
             - pwd
       - OUT: lara_img
+
+  - name: deploy_lara
+    type: runSh
+    integrations:
+      - demo_aws
+    steps:
+      - IN: lara_img
+      - IN: infra_info
+        switch: off
+      - TASK:
+          script:
+           - |
+               aws_access_key_id=$(shipctl get_integration_field demo_aws "accessKey")
+               aws_secret_access_key=$(shipctl get_integration_field demo_aws "secretKey")
+               aws configure set aws_access_key_id "$aws_access_key_id"
+               aws configure set aws_secret_access_key "$aws_secret_access_key"
+               aws configure set region "$region"
+           - aws ecs list-clusters
+#        - script: shippable_replace ${DEPLOYECSUNMANAGEDREPO_STATE}/taskDefinitions/sampleTaskDef.json
+#        - script: aws ecs register-task-definition --cli-input-json file://${DEPLOYECSUNMANAGEDREPO_STATE}/taskDefinitions/sampleTaskDef.json > output.json
+#        - script: REVISION=$(cat output.json | jq '.taskDefinition.revision')
+#        - script: echo "revision is $REVISION"
+#        - script: aws ecs update-service --cluster deploy-ecs-basic --service ${JOB_NAME} --task-definition shippable:${REVISION} --desired-count 1
